# task-sh

./: .gitattributes  .gitignore  .shellcheckrc  CLAUDE.md  DEVELOPMENT.md  README.md  _assert.lib.sh  _bindump.lib.sh  _edit.lib.sh  _encoding.lib.sh  _ifsv.lib.sh  _misc.lib.sh  _test-bindump.lib.sh  _test-edit.lib.sh  _test-encoding.lib.sh  _test-fetched-cmds.lib.sh  _test-ifsv.lib.sh  _test-json2sh.lib.sh  _test-misc.lib.sh  _test-project.lib.sh  _test-shell-features.lib.sh  _test-time.lib.sh  _test-toml.lib.sh  _test-yq.lib.sh  _time.lib.sh  alpine.Dockerfile  ansible.lib.sh  assert.lib.sh  astro-dev.lib.sh  astro-init.lib.sh  astro.lib.sh  attrs.lib.sh  aws.lib.sh  bun.lib.sh  busybox.Dockerfile  caddy.lib.sh  chezmoi.lib.sh  cloudflare-api.lib.sh  cloudflare-dns.lib.sh  cloudflare.lib.sh  (+152 more)
ahk/: main.ahk
bash/: bash-hello.bash  task  task-bash.lib.sh  task.cmd  task.sh
bun/: .gitignore  .prototools  base64_stream.test.ts  binary.test.ts  foo.test.ts  package-lock.json  package.json  task-bun.lib.sh  task-node.lib.sh  task-project.lib.sh  task-proto.lib.sh  template_stream.test.ts  test-bun.lib.sh  test-globals.d.ts  tsconfig.json  vision_try.ts
cmd/: error.cmd  loop-on-wildcard.cmd  loop.sh  process.sh  program_files_path.cmd
cmd_exe/: README.md  loop.cmd  params.cmd  process-cmd.sh
go/: attributes.lib.sh  cmd-embedded-go  cmd-embedded-go.cmd  cmd-go.sh  db.yaml  dm.go  embedded-go  embedded-go.cmd  go-cmd.sh  go-embedded  go-embedded.cmd  go-hello  go-hello.cmd  go-hello.go  go.mod  go.sum  hello.go  p.go  psqldef.Dockerfile  task-embedded-go.lib.sh  task-foo.go  task-go-scripts.lib.sh  task-go-task.lib.sh  task-go.lib.sh  task-prj.lib.sh  task-project.lib.sh  task.cmd  task.sh  task_go.lib.sh
go.bak/: .gitignore  gendiary.go  go-base32.go  go-git-clone.go  go-hello.cmd  go-xls.go  go.sum  task-embedded-go.lib.sh  task-foo.go  task.go
hs/: .gitignore  CHANGELOG.md  README.md  ghcup-cmd.sh  hsprj.cabal  package.yaml  stack-cmd.sh  stack.yaml  task-hs.lib.sh  task.sh
java/: .gitignore  settings.gradle.kts  task-gradle.lib.sh  task-java-scripts.lib.sh  task-java.lib.sh  task.sh
js/: _httpd-mini.mjs  cmd-volta.cmd  cmd-volta.sh  js-feistel.mjs  js-hello.mjs  js-https.mjs  js-spawn.mjs  js-takes-long-time.mjs  json2sh.mjs  package-lock.json  package.json  sh-pipy.sh  sh-process-subst.sh  task-another.cjs  task-baz.module.cjs  task-curl.lib.sh  task-ip-utils.lib.sh  task-js-scripts.lib.sh  task-json2sh.lib.sh  task-my-ip-addr.lib.sh  task-node-delegate.lib.sh  task-node-run.sh  task-node-task.lib.sh  task-node.lib.sh  task-project.lib.sh  task-volta.lib.sh  task.cjs  task.cmd  task.sh  test-project.lib.sh  volta-cmd.cmd  volta-cmd.sh  yaml2json.mjs
lib/: assert.lib.sh  attrs.lib.sh  task  task-astro-dev.lib.sh  task-astro-init.lib.sh  task-astro.lib.sh  task-awscli.lib.sh  task-bcrypt.lib.sh  task-bun.lib.sh  task-curl.lib.sh  task-d1.lib.sh  task-docker.lib.sh  task-embedded-go.lib.sh  task-go-task.lib.sh  task-go.lib.sh  task-gobin.lib.sh  task-gorun.lib.sh  task-java.lib.sh  task-javy.lib.sh  task-jq.lib.sh  task-json2sh.lib.sh  task-my-ip-addr.lib.sh  task-node-bcrypt.lib.sh  task-node-task.lib.sh  task-node.lib.sh  task-pages-dev.lib.sh  task-pages.lib.sh  task-pg-dev-svr.lib.sh  task-pgclt.lib.sh  task-pgsvr.lib.sh  task-plantuml.lib.sh  task-project.lib.sh  task-sqlc-ts-build.lib.sh  task-sqlc-ts.lib.sh  task-sqldef.lib.sh  task-sqlite3.lib.sh  task-symlink-check.lib.sh  task-test.lib.sh  task-volta.lib.sh  task-yq.lib.sh  (+1 more)
lib.sh/: boot.lib.sh  deploy.lib.sh  doit.lib.sh  min.lib.sh  utils.lib.sh
mise-sh/: gen-test.lib.sh.toml  utils.lib.sh
mise-sh-tasks/: gen-test.lib.sh.toml  test.lib.sh  test.toml
mise-tasks/: _bar.sh  hello
mlr/: ledger.csv  process_ledger.mlr
next/: .gitignore  package-lock.json  package.json  task.sh  (+4 more)
py/: .gitignore  feistel.py  pyproject.toml  rye-cmd.sh  task-py-scripts.lib.sh  task-py.lib.sh  task-python.lib.sh  task-rye.lib.sh  task-uv.lib.sh  task.cmd  task.sh
py/lib/: run-py.py
rs/: .gitignore  Cargo.toml  build.rs  task-project.lib.sh  task-rs-scripts.lib.sh  task-rs.lib.sh  task-wasm.lib.sh  task.cmd  task.sh
rs/src/: _subcmd_list.rs  cmds.rs  main.rs  subcmd_dm.rs  subcmd_empty.rs  subcmd_fn.rs  subcmd_foo.rs  subcmd_goodbye.rs  subcmd_hello.rs  subcmd_list.rs  subcmds.rs
rs/src/cmds/: foo.rs  fs.rs  hello.rs
wasi/: .gitignore  Cargo.toml  build.rs  task  task-project.lib.sh  task-rs-wasi-scripts.lib.sh  task-rs-wasi.lib.sh  task-rs.lib.sh  task.sh
wasi/src/: main.rs  subcmd_dm.rs  subcmd_hello.rs  subcmds.rs
wasm/: .gitignore  Cargo.toml  index.html  task-rs.lib.sh  task.sh  test.js
wasm/src/: lib.rs
(+400 files in other folders)
