[project]
name = "py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kiichiro Kyle NAKA", email = "knaka@ayutaya.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "invoke>=2.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/py"]
