[package]
name = "wasimain"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
glob = "~0.3.1"

[dependencies]
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }
clap = { version = "~4.5.1", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:wasi"

[package.metadata.component.dependencies]
