# The Manifest Format - The Cargo Book https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rsmain"
version = "0.1.0"
edition = "2021"
# Releases · rust-lang/rust https://github.com/rust-lang/rust/releases
rust-version = "1.80.1"
# build = "build.rs"

[build-dependencies]
wasm-bindgen-test = "0.3.34"

# バージョン指定において、semantic に patch は上げて良いなら `~` で指定する
[dependencies]
wasm-bindgen = "0.2.84"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# cargo-run-bin - crates.io: Rust Package Registry https://crates.io/crates/cargo-run-bin
[package.metadata.bin]
# wasm-pack - crates.io: Rust Package Registry https://crates.io/crates/wasm-pack
wasm-pack = { version = "~0.13.0" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
